# rust-tui.archetype

./: .gitignore  README.md  TODO.md  archetype.rhai  archetype.yaml
contents/{{ project-name }}/: .gitignore  Cargo.toml  release-plz.toml
contents/{{ project-name }}/.github/workflows/: binary.yaml  release-plz.yaml  release.yaml  release.yml  upload-binary.yaml
contents/{{ project-name }}/crates/{{ project-name }}/: Cargo.toml
contents/{{ project-name }}/crates/{{ project-name }}/src/: background.rs  input.rs  main.rs  tui.rs
contents/{{ project-name }}/docs/: Drawing-to-the-Terminal.md  Processing-User-Input.md  Running-Background-Tasks.md
contents/{{ project-name }}/xtask/: Cargo.toml
contents/{{ project-name }}/xtask/src/: main.rs
