[workspace]
resolver = "2"
members = ["crates/*", "xtask"]
default-members = ["crates/*"]

[workspace.package]
edition = "2024"
authors = ["{{ author_full }}"]
license = "MIT"
repository = "https://github.com/aisamji/{{ project-name }}"

[workspace.dependencies]
clap = { version = "4.5.36", features = ["derive"] }
anyhow = "1.0.98"

