[package]
name = "xtask"
version = "0.0.0"
edition.workspace = true
authors.workspace = true
publish = false # Ensure we do not accidentally publish this package.

[dependencies]
clap.workspace = true
toml_edit = "0.22.26"
serde = { version = "1.0.219", features = ["derive"] }
semver = "1.0.26"
walkdir = "2.5.0"
git2 = "0.20.2"
anyhow.workspace = true
