[package]
name = "{{ project-name }}"
version = "0.0.0"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository = "https://github.com/aisamji/{{ project-name }}"

[dependencies]
crossterm = { version = "0.29.0", features = ["windows", "event-stream"] }
ratatui = "0.29.0"
tokio = { version = "1.44.2", features = [
    "rt-multi-thread",
    "sync",
    "macros",
    "time",
] }
clap.workspace = true
anyhow = "1.0.98"
futures = "0.3.31"
